<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="350dp"
        android:layout_height="480dp" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/connected_frag_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/connected_frag_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:layout_marginTop="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/connected_frag_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/connect_frag_hint"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:layout_marginTop="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connected_frag_title"
                />
            <TextView
                android:id="@+id/device_name_title"
                android:labelFor="@id/device_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/device_title"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connected_frag_hint"
                />
            <EditText
                android:id="@+id/device_name_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_name_title"
                android:background="@drawable/edit_text_background"
                android:layout_marginStart="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="4sp"
                android:autofillHints=""
                android:inputType="text" />
            <TextView
                android:id="@+id/ssid_title"
                android:labelFor="@id/device_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ssid_title"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_name_text"
                />
            <EditText
                android:id="@+id/ssid_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ssid_title"
                android:background="@drawable/edit_text_background"
                android:layout_marginStart="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="4sp"
                android:autofillHints=""
                android:inputType="text" />
            <TextView
                android:id="@+id/pass_title"
                android:labelFor="@id/device_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pass_title"
                android:textSize="14sp"
                android:textColor="@color/text"
                android:layout_marginTop="30sp"
                android:layout_marginStart="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ssid_value"
                />
            <EditText
                android:id="@+id/pass_value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pass_title"
                android:background="@drawable/edit_text_background"
                android:layout_marginStart="20sp"
                android:textColor="@color/black"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="4sp"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:id="@+id/on_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHeight_percent="0.12"
                android:text="@string/turn_on"
                android:textColor="@color/white"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/button"
                app:layout_constraintTop_toBottomOf="@id/pass_value"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="20sp"
                android:layout_marginStart="20sp"
                />
            <Button
                android:id="@+id/off_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHeight_percent="0.12"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:text="@string/turn_off"
                android:textColor="@color/white"
                android:backgroundTint="@color/button"
                app:layout_constraintTop_toBottomOf="@id/pass_value"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginBottom="20sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>